chore: move llms

--- a/book/lectures/nlp_deep/llms/decoding.ipynb
+++ b/book/lectures/nlp_deep/llms/decoding.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The probability of generating a word sequence $w_{1:𝑇}$ given an initial context word sequence $W_0$ can be expressed as:\n",
     "\n",
-    "$$ P(w_{1:T} | W_0 ) = \\prod_{t=1}^T P(w_{t} | w_{1: t-1}, W_0) \\text{ ,with } w_{1: 0} = \\emptyset, $$\n",
+    "$$ P(w*{1:T} | W_0 ) = \\prod*{t=1}^T P(w*{t} | w*{1: t-1}, W*0) \\text{ ,with } w*{1: 0} = \\emptyset, $$\n",
     "\n",
     "Here, $W_0$ is the initial context word sequence. The length 𝑇 of the word sequence is determined on-the-fly, which means it is decided as the sequence is generated. The sequence generation typically stops when an End-Of-Sequence (EOS) token is generated from the probability distribution $𝑃(w_t|w_{1:t−1},W_0)$.\n",
     "\n",
@@ -70,7 +70,7 @@
     "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
     "\n",
     "# add the EOS token as PAD token to avoid warnings\n",
-    "model = TFGPT2LMHeadModel.from_pretrained(\"gpt2\", pad_token_id=tokenizer.eos_token_id)"
+    "model = TFGPT2LMHeadModel.from_pretrained(\"gpt2\", pad_token_id=tokenizer.eos_token_id)\n"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "tags": []
    },
    "source": [
-    "```{figure} ../figs/deep_nlp/zero/deepnlp_2_greedy_search.png\n",
+    "```{figure} figs/deepnlp_2_greedy_search.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-greedy-search\n",
@@ -155,7 +155,7 @@
     "greedy_output = model.generate(input_ids, max_length=100)\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(greedy_output[0], skip_special_tokens=True))"
+    "print(tokenizer.decode(greedy_output[0], skip_special_tokens=True))\n"
    ]
   },
   {
@@ -214,7 +214,7 @@
     "tags": []
    },
    "source": [
-    "```{figure} ../figs/deep_nlp/zero/deepnlp_2_beam_search.png\n",
+    "```{figure} figs/deepnlp_2_beam_search.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-beam-search\n",
@@ -287,7 +287,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(beam_output[0], skip_special_tokens=True))"
+    "print(tokenizer.decode(beam_output[0], skip_special_tokens=True))\n"
    ]
   },
   {
@@ -344,7 +344,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(beam_output[0], skip_special_tokens=True))"
+    "print(tokenizer.decode(beam_output[0], skip_special_tokens=True))\n"
    ]
   },
   {
@@ -400,7 +400,7 @@
     "# now we have 3 output sequences\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
     "for i, beam_output in enumerate(beam_outputs):\n",
-    "    print(\"{}: {}\".format(i, tokenizer.decode(beam_output, skip_special_tokens=True)))"
+    "    print(\"{}: {}\".format(i, tokenizer.decode(beam_output, skip_special_tokens=True)))\n"
    ]
   },
   {
@@ -438,7 +438,7 @@
     "tags": []
    },
    "source": [
-    "```{figure} ../figs/deep_nlp/zero/deepnlp_2_beam_vs_human.png\n",
+    "```{figure} figs/deepnlp_2_beam_vs_human.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-beam-search-vs-human\n",
@@ -466,7 +466,7 @@
     "\n",
     "The following graphic visualizes language generation when sampling.\n",
     "\n",
-    "```{figure} ../figs/deep_nlp/zero/deepnlp_2_sampling_search.png\n",
+    "```{figure} figs/deepnlp_2_sampling_search.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-sampling-search\n",
@@ -524,7 +524,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
+    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))\n"
    ]
   },
   {
@@ -542,7 +542,7 @@
     "\n",
     "To address this issue, we can adjust the `temperature` of the [softmax](https://en.wikipedia.org/wiki/Softmax_function#Smooth_arg_max) function. This modification sharpens the distribution $P(w|w\\_{1:t-1})$, increasing the likelihood of high probability words and decreasing the likelihood of low probability words. The following code snippet demonstrates how to apply a temperature of 0.7:\n",
     "\n",
-    "```{figure} ../figs/deep_nlp/zero/deepnlp_2_sampling_search_with_temp.png\n",
+    "```{figure} figs/deepnlp_2_sampling_search_with_temp.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-sampling-search-with-temp\n",
@@ -595,7 +595,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
+    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))\n"
    ]
   },
   {
@@ -620,7 +620,7 @@
    "source": [
     "### Top-K Sampling\n",
     "\n",
-    "```{figure} ../figs/deep_nlp/zero/deepnlp_2_top_k_sampling.png\n",
+    "```{figure} figs/deepnlp_2_top_k_sampling.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-top-k-sampling\n",
@@ -664,7 +664,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
+    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))\n"
    ]
   },
   {
@@ -699,7 +699,7 @@
    "source": [
     "### Top-p (nucleus) sampling\n",
     "\n",
-    "```{figure} ../figs/deep_nlp/zero/deepnlp_2_top_p_sampling.png\n",
+    "```{figure} figs/deepnlp_2_top_p_sampling.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-top-p-sampling\n",
@@ -754,7 +754,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
+    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))\n"
    ]
   },
   {
@@ -810,7 +810,7 @@
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
     "for i, sample_output in enumerate(sample_outputs):\n",
-    "    print(\"{}: {}\".format(i, tokenizer.decode(sample_output, skip_special_tokens=True)))"
+    "    print(\"{}: {}\".format(i, tokenizer.decode(sample_output, skip_special_tokens=True)))\n"
    ]
   },
   {
@@ -877,7 +877,7 @@
     "\n",
     "**The Career of Future**\n",
     "\n",
-    "```{figure} ../figs/deep_nlp/zero/deepnlp_2_prompt.png\n",
+    "```{figure} figs/deepnlp_2_prompt.png\n",
     "---\n",
     "width: 50%\n",
     "name: fig-prompt-engineering\n",
