--- a/book/lectures/nlp_deep/llms/plms.ipynb
+++ b/book/lectures/nlp_deep/llms/plms.ipynb
@@ -1,16 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfdc61fb",
    "metadata": {},
    "source": [
     "# Pretrained Language Models\n",
     "\n",
-    "![](../figs/deep_nlp/plms/plm.png)"
+    "![](figs/plm.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f613f372",
    "metadata": {},
@@ -20,17 +22,18 @@
     "- Language models are models that can predict the next word in a sequence of words.\n",
     "- They are trained on large corpora of text.\n",
     "- They are used to generate text, to fill in missing words, to correct spelling, and to do many other things.\n",
-    "- They are also used to initialize the weights of other models, such as neural machine translation models. \n",
+    "- They are also used to initialize the weights of other models, such as neural machine translation models.\n",
     "\n",
     "## Contextualized Word Embeddings\n",
     "\n",
     "- Contextualized word embeddings are word embeddings that are computed in the context of a sentence.\n",
     "- Word embeddings like Word2Vec and GloVe are static, meaning that they are computed without any context.\n",
     "  - E.g., the word \"bank\" in \"I went to the bank to deposit my check\" is the same as the word \"bank\" in \"The river bank was full of dead fish.\"\n",
-    "- Deep learning based word embeddings like ELMo and BERT are contextualized, meaning that they are computed in the context of a sentence."
+    "- Deep learning based word embeddings like ELMo and BERT are contextualized, meaning that they are computed in the context of a sentence.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a319f694",
    "metadata": {},
@@ -39,10 +42,11 @@
     "\n",
     "- Pretrained language models are language models that have been trained on large corpora of text in a self-supervised manner.\n",
     "- Then, the weights of the model are saved and can be used to fine-tune other models for specific tasks. It is called transfer learning.\n",
-    "- The power of pretrained language models is that they understand the generic linguistic structure of language."
+    "- The power of pretrained language models is that they understand the generic linguistic structure of language.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "52c2f9a9",
    "metadata": {},
@@ -56,10 +60,11 @@
     "- PLMs can also be categorized by their architecture.\n",
     "  - **Encoder-only models** predict the masked or corrupted tokens based on all other tokens in the sequence.\n",
     "  - **Decoder-only models** predict the next token based on the previous tokens.\n",
-    "  - **Encoder-decoder models** generate output sequences based on input sequences."
+    "  - **Encoder-decoder models** generate output sequences based on input sequences.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9583da00",
    "metadata": {},
@@ -81,15 +86,16 @@
     "- This inherent sequential nature of the models does not understand the context of the sentence as a whole.\n",
     "- Correctly predicting the next word depends on the previous words.\n",
     "- As a sequence of words gets longer, the model becomes more difficult to predict the next word.\n",
-    "- This nature of the model makes it difficult and slow to train."
+    "- This nature of the model makes it difficult and slow to train.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5c2fc400",
    "metadata": {},
    "source": [
-    "###  Masked Language Modeling\n",
+    "### Masked Language Modeling\n",
     "\n",
     "- The main objective of the model is to predict the masked words, which are randomly masked in the input sequence.\n",
     "- This approach makes the model bidirectional in nature because the masked words are predicted based on the words before and after the masked words.\n",
@@ -108,6 +114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "51dd44a4",
    "metadata": {},
@@ -119,10 +126,11 @@
     "- Therefore, this approach is unidirectional in nature.\n",
     "- GPT (Generative Pre-Training) and its variants follow this approach.\n",
     "- This approach naturally takes into account the dependency between the masked words.\n",
-    "- Because the model only uses the decoder part of the transformer architecture, it is also called decoder-only language model."
+    "- Because the model only uses the decoder part of the transformer architecture, it is also called decoder-only language model.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "35906d5a",
    "metadata": {},
@@ -132,19 +140,18 @@
     "- The major flaw of the masked language modeling approach is that it does not take into account the dependency between the masked words.\n",
     "- Permutation language modeling is to predict the tokens in a random order.\n",
     "- XLNet (Generalized Autoregressive Pretraining for Language Understanding) uses this approach. ({cite}`yang2019xlnet`)\n",
-    "- Permutation language models learn the bidirectional dependency between all combinations of tokens in the sequence.\n",
-    "\n",
-    "\n"
+    "- Permutation language models learn the bidirectional dependency between all combinations of tokens in the sequence.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "66d50cc3",
    "metadata": {},
    "source": [
     "## Transformer Architecture and PLMs\n",
     "\n",
-    "The transformer architecture consists of two parts: the encoder and the decoder. The encoder is used to encode the input sequence into a vector representation. The decoder is used to decode the vector representation into the output sequence. \n",
+    "The transformer architecture consists of two parts: the encoder and the decoder. The encoder is used to encode the input sequence into a vector representation. The decoder is used to decode the vector representation into the output sequence.\n",
     "\n",
     "We can classify PLMs into three categories based on the usage of the encoder and the decoder:\n",
     "\n",
@@ -152,10 +159,11 @@
     "- **Decoder-only PLMs** (e.g. GPT-2, CTRL, etc.) only use the decoder to generate the output sequence. The encoder is not used. The decoder is trained to predict the next word in the sequence of words.\n",
     "- **Encoder-decoder PLMs** (e.g. T5, BART, MASS, etc.) use both the encoder and the decoder. The encoder is used to encode the input sequence into a vector representation. The decoder is used to generate the output sequence.\n",
     "\n",
-    "![](figs/t5-structure.png)"
+    "![](figs/t5-structure.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e175dac0",
    "metadata": {},
@@ -165,16 +173,17 @@
     "- GPT (Generative Pre-Training) is the first decoder-only PLM.\n",
     "- GPT uses the uni-directional context to predict the next word.\n",
     "\n",
-    "    Loss function is defined as:\n",
+    "  Loss function is defined as:\n",
     "\n",
-    "    $$\n",
-    "    \\mathcal{L} = -\\frac{1}{N} \\sum_{i=1}^N \\log \\hat{p}_{\\theta}(w_i \\mid w_1, \\ldots, w_{i-1})\n",
-    "    $$\n",
+    "  $$\n",
+    "  \\mathcal{L} = -\\frac{1}{N} \\sum_{i=1}^N \\log \\hat{p}_{\\theta}(w_i \\mid w_1, \\ldots, w_{i-1})\n",
+    "  $$\n",
     "\n",
-    "- Main usage of GPT is to generate text."
+    "- Main usage of GPT is to generate text.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bbc69e19",
    "metadata": {},
@@ -185,16 +194,16 @@
     "- BERT uses two objectives to train the model: masked language modeling and next sentence prediction.\n",
     "- **Masked language modeling** is to predict the masked words in the input sequence.\n",
     "\n",
-    "```{image} ../figs/deep_nlp/plms/bert_mlm.jpg\n",
+    "```{image} figs/bert_mlm.jpg\n",
     ":alt: bert_mlm\n",
     ":class: bg-primary mb-1\n",
     ":width: 400px\n",
     ":align: center\n",
     "```\n",
     "\n",
-    "  - **Next sentence prediction** is to predict whether the second sentence is the next sentence of the first sentence.\n",
+    "- **Next sentence prediction** is to predict whether the second sentence is the next sentence of the first sentence.\n",
     "\n",
-    "```{image} ../figs/deep_nlp/plms/bert_nsp.jpg\n",
+    "```{image} figs/bert_nsp.jpg\n",
     ":alt: bert_nsp\n",
     ":class: bg-primary mb-1\n",
     ":width: 400px\n",
@@ -218,7 +227,7 @@
     "  - **Training with more epochs** is used.\n",
     "  - **No next sentence prediction** is used.\n",
     "\n",
-    "```{image} ../figs/deep_nlp/plms/roberta.png\n",
+    "```{image} figs/roberta.png\n",
     ":alt: rberta\n",
     ":class: bg-primary mb-1\n",
     ":width: 500px\n",
@@ -227,6 +236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "af49e693",
    "metadata": {},
@@ -239,15 +249,16 @@
     "  - **Cross-layer parameter sharing**: share the parameters across different layers.\n",
     "  - **Inter-sentence coherence objective**: use the sentence order prediction task to train the model.\n",
     "\n",
-    "```{image} ../figs/deep_nlp/plms/albert.png\n",
+    "```{image} figs/albert.png\n",
     ":alt: albert\n",
     ":class: bg-primary mb-1\n",
     ":width: 700px\n",
     ":align: center\n",
-    "```"
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7ab25849",
    "metadata": {},
@@ -258,7 +269,7 @@
     "- ELECTRA uses the replaced token detection task to train the model.\n",
     "- The generator is used to generate the masked words, and the discriminator is trained with a binary classification task to distinguish the generated words from the original words.\n",
     "\n",
-    "```{image} ../figs/deep_nlp/plms/electra.png\n",
+    "```{image} figs/electra.png\n",
     ":alt: electra\n",
     ":class: bg-primary mb-1\n",
     ":width: 700px\n",
@@ -267,15 +278,16 @@
     "\n",
     "- ELECTRA shows the better performance than BERT on the GLUE benchmark.\n",
     "\n",
-    "```{image} ../figs/deep_nlp/plms/electra_result.png\n",
+    "```{image} figs/electra_result.png\n",
     ":alt: electra_result\n",
     ":class: bg-primary mb-1\n",
     ":width: 700px\n",
     ":align: center\n",
-    "```"
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "57888ea1",
    "metadata": {},
@@ -284,17 +296,19 @@
     "\n",
     "- XLNet (Generalized Autoregressive Pretraining for Language Understanding) is the first permutation language model.\n",
     "- XLNet uses the permutation language modeling to train the model.\n",
+    "\n",
     "  - It randomly permutes the input sequence and then predicts the target word using the remaining words in the sequence.\n",
     "  - Bidirectional dependency between all combinations of tokens in the sequence is learned.\n",
     "\n",
-    "  ![](../figs/deep_nlp/plms/xlnet-plm.png)\n",
-    " \n",
+    "  ![](figs/xlnet-plm.png)\n",
+    "\n",
     "- XLNet utilizes the Transformer-XL architecture to train the model.\n",
     "  - The Transformer-XL architecture uses the relative positional encoding to encode the position of the tokens in the sequence.\n",
-    "  - It uses the segment-level recurrence to encode the dependency between the tokens in the sequence."
+    "  - It uses the segment-level recurrence to encode the dependency between the tokens in the sequence.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "87cbb070",
    "metadata": {},
@@ -309,10 +323,11 @@
     ":class: bg-primary mb-1\n",
     ":width: 400px\n",
     ":align: center\n",
-    "```"
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9868b524",
    "metadata": {},
@@ -325,10 +340,11 @@
     "  - For classification tasks, feed the same input sequence to the encoder and the decoder and use the final decoder token for classification.\n",
     "  - For generation tasks, feed the input sequence to the encoder and use the decoder to generate the output sequence.\n",
     "\n",
-    "![](../figs/deep_nlp/plms/bart.png)"
+    "![](figs/bart.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "af444150",
    "metadata": {},
@@ -339,10 +355,11 @@
     "- We add task-specific layers (e.g. classification layer) on top of the pre-trained PLMs to perform the downstream tasks.\n",
     "- Task-specific layers are initialized randomly and then jointly trained with the pre-trained PLMs with task-specific training data.\n",
     "\n",
-    "![](../figs/deep_nlp/plms/finetuning.png)"
+    "![](figs/finetuning.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5f7237f5",
    "metadata": {},
@@ -357,7 +374,7 @@
     "- Clark, K., Luong, M. T., Le, Q. V., & Manning, C. D. (2020). ELECTRA: Pre-training text encoders as discriminators rather than generators. ICLR.\n",
     "- Yang, Z., Dai, Z., Yang, Y., Carbonell, J., Salakhutdinov, R., & Le, Q. V. (2019). XLNet: Generalized Autoregressive Pretraining for Language Understanding. NeurIPS.\n",
     "- affel, C., Shazeer, N., Roberts, A., Lee, K., Narang, S., Matena, M., ... & Liu, P. J. (2020). Exploring the limits of transfer learning with a unified text-to-text transformer. JMLR.\n",
-    "- Lewis, M., Liu, Y., Goyal, N., Ontanon, S., Ba, J., & Zettlemoyer, L. (2020). BART: Denoising sequence-to-sequence pre-training for natural language generation, translation, and comprehension. arXiv preprint arXiv:1910.13461."
+    "- Lewis, M., Liu, Y., Goyal, N., Ontanon, S., Ba, J., & Zettlemoyer, L. (2020). BART: Denoising sequence-to-sequence pre-training for natural language generation, translation, and comprehension. arXiv preprint arXiv:1910.13461.\n"
    ]
   }
  ],
